# bazel

./: .gitignore  MODULE.bazel  WORKSPACE  package-lock.json  package.json  requirements_lock.txt
apps/client-codegenie/: BUILD  package-lock.json  package.json
apps/server-codegenie/: BUILD
